--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <meta property="og:title" content="BI Components" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.bi-components.com" />
+    <meta property="og:image" content="https://bi-components.com/static/img/logo.0892af94.png" />
+    <meta property="og:description" content="The largest continuous source of semiconductors in Asia.™   Search The largest continuous source of semiconductors in Asia." />
+    <meta property="og:site_name" content="Bi components" />
+    <meta name="description" content="The largest continuous source of semiconductors in Asia.">
+    <meta name="keywords" content="BI Components, Bi components, Bi-components, chip, HiRel products">
     <title>BI Components</title>
   </head>
   <body>
