--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but bi doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>The largest continuous source of semiconductors in Asia.We're sorry but bi doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
